--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,14 +1,14 @@
 /* src/components/Sidebar.css */
 .sidebar {
   position: fixed;
-  top: 0;
+  top: 100px;
   left: 0;
-  height: 100%;
+  height: calc(100vh - 100px);
   width: 250px;
   background-color: #2c3e50;
   color: white;
   transition: transform 0.3s ease;
-  z-index: 1000;
+  z-index: 500;
 }
 
 .sidebar.closed {
@@ -21,7 +21,7 @@
 
 .sidebar-toggle {
   position: absolute;
-  top: 20px;
+  top: 40px;
   right: -60px;
   background-color: #34495e;
   color: white;
@@ -38,7 +38,7 @@ nav {
 nav ul {
   list-style-type: disc;
   padding-left: 30px;
-  padding: 20px;
+  padding: 40px;
   margin: 0;
   text-align: left;
 }
