--- a/src/index.css
+++ b/src/index.css
@@ -22,20 +22,19 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   /* margin: 0; */
-  /* display: flex; */
-  /* place-items: center; */
-  /* min-width: 320px; */
-  /* min-height: 100vh; */
-}
+/* display: flex; */
+/* place-items: center; */
+/* min-width: 320px; */
+/* min-height: 100vh; */
+/* } */
 
-h1 {
+/* h1 {
   /* font-size: 3.2em; */
-  /* line-height: 1.1; */
-}
-
-button {
+/* line-height: 1.1; */
+/* } */
+*/ */ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -54,7 +53,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -65,4 +64,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
