--- a/src/components/SchoolBusFront/SchoolBus.css
+++ b/src/components/SchoolBusFront/SchoolBus.css
@@ -39,3 +39,41 @@ footer {
 .smtc-selected-row {
   background-color: yellow !important;
 }
+
+.form-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.form-wrapper {
+  display: flex;
+  gap: 20px;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  align-items: flex-start;
+}
+
+.form-container {
+  flex: 2;
+}
+
+.bus-image {
+  flex: 1;
+  max-width: 300px;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+}
+.divider {
+  border: 1px solid #ccc;
+  margin: 20px 0;
+}
+
+.button-group {
+  display: flex;
+  justify-content: right;
+  gap: 10px;
+  margin-top: 10px;
+}
